--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link_active">главная</a>
+            <a class="header__link header__link_active" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -43,7 +43,7 @@
         <h1 class="cover__title letter-spacing">
           <span class="aligned-text_left">о<span class="letter-spacing-extended">н</span>о</span>
           <span class="aligned-text_center">
-            те<span class="letter-spacing-extended">б</span><span class="no-letter-spacing">е</span>
+            те<span class="letter-spacing-extended">бе</span>
           </span>
           <span class="aligned-text_right">
             <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
